@@ -25,7 +25,6 @@
     "grunt-contrib-jade": "^0.14.1",
     "grunt-contrib-jasmine": "~0.8.1",
     "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-symlink": "^0.3.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "image-size": "~0.3.5",
