@@ -2,7 +2,7 @@ mixin link(href, name)
 	a(class!=attributes.class, href=href)= name
 
 mixin stylesheet(href)
-	link(rel="stylesheet" href=href)
+	link(rel='stylesheet' href=relPath(href))
 
 mixin script(href)
 	script(src=relPath(href))
