@@ -2,3 +2,5 @@ extends ./layouts/layout
 
 block content
 	p lorem ipsum dolar sit amet dolar
+	+image('250.png')
+	.baz
