@@ -3,7 +3,7 @@ include ../includes/mixins
 html
     head
         title= title
-        link(rel='stylesheet', href=relPath('shared/css/style.css'))
+        +stylesheet('shared/css/style.css')
         block styles
     body
         include ../includes/nav
